small tasked to work

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <h2>Raw API JSON (for developers)</h2>
     <pre id="rawJson"></pre>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
